# qml_widgets

./: .clang-format  .nvimrc  ButtonsGallery.qml  CMakeLists.txt  Calculator.qml  DialogsGallery.qml  LayoutsGallery.qml  README.md  TextEditingGallery.qml  WidgetsGallery.qml  ZComboBox.cpp  ZComboBox.h  ZGroupBox.cpp  ZGroupBox.h  ZInputDialog.h  ZLayouts.cpp  ZLayouts.h  ZListModel.h  ZMainWindow.cpp  ZMenuBar.cpp  ZPalette.cpp  ZPalette.h  ZWidget.cpp  ZWidget.h  justfile  main.cpp  main.qml  qml.qrc  widget_list.md
examples/: CMakeLists.txt  qml.qrc
examples/qml/: DialogsGallery.qml  WidgetsGallery.qml  main.qml
examples/src/: main.cpp
qml/: DialogsGallery.qml
src/: ZComboBox.cpp  ZComboBox.h  ZGroupBox.cpp  ZGroupBox.h  ZInputDialog.cpp  ZInputDialog.h  ZLayouts.cpp  ZLayouts.h  ZListModel.cpp  ZListModel.h  ZMainWindow.cpp  ZMainWindow.h  ZMenuBar.cpp  ZMenuBar.h  ZPalette.cpp  ZPalette.h  ZWidget.cpp  ZWidget.h  main.cpp  plugin.cpp
